[project]
name = "brownies"
version = "0.0.1"

[build-system]
requires = [
    "setuptools >= 40.9.0",
    "setuptools_scm",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = [
    "tests"
]
#pythonpath = "src"
